# test_sim

./: CMakeLists.txt  package.xml
launch/: monitor.launch  record_bag.launch  record_bag_X4.launch  save_octomap_to_file.launch  write_bag_to_file.launch  write_bag_to_file_subway.launch  write_bag_to_file_unreal_maze.launch
scripts/: bash_learning.bash  benchmark_goal_pose_frontier_compute.ipynb  benchmark_goal_pose_samplers.ipynb  condense_bags.bash  explore_stats.py  if_test.sh  plot_bags.m  plot_data.m  set_test_variables.sh  sim_run_plots.ipynb  sim_run_plots_subway_evaluations.ipynb  sim_run_plots_subway_gains.ipynb  sim_run_plots_unreal_maze.ipynb  sim_run_plots_unreal_maze_iros.ipynb  spin.sh  takeoff_and_spin.sh  takeoff_only.sh  test_explore.bash  test_explore_esdf_vs_occ.bash  tests_and_groups.py  thesis_hardware_plots.ipynb
src/: monitor_node.cpp  save_octomap_to_file.cpp  save_test_data.cpp
