<package format="2">
	<name>test_sim</name>
	<version>0.1.0</version>
	<description>
		This package monitors simulation status for stopping criteria and contains launch files for recording bag data.
	</description>
	<maintainer email="andmills17@gmail.com">Andrew B Mills</maintainer>

	<url>https://github.com/andrewbmills/test_sim</url>
	<author>Andrew B Mills</author>
	  <license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>rosconsole</depend>
	<depend>rostime</depend>
	<depend>roscpp_serialization</depend>
	<depend>octomap_ros</depend>
	<depend>boost_system</depend>
	<depend>pcl</depend>
	<depend>pcl_conversions</depend>
	<depend>pcl_ros</depend>
	<depend>geometry_msgs</depend>
	<depend>sensor_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_msgs</depend>
	<depend>octomap_msgs</depend>
	<depend>octomap</depend>
</package>
